Test_files/invalidTestCases/Underflow_float.avm
push float(-40000000400000000000000000000000000000000000000000000000000000000000000)
exit